--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
     url: /knowledge/
   - title: "Life"
     url: /life/
+  - title: "Cat"
+    url: /cat/
+
 # - title: "Publications"
 #   url: /publications/
 
